lab1/Test/L1-A-11-94.cmm
float ;
int f1WLc ( struct FHB66Neewk nnqSyO2l0BDbN ) {
  while ( sU )   BYkkbRsxzPxp = teqHhyUz90BltrZK || 
    UfQuvgTQ_ > VU5kASvbHDC9_MT - mzOHBoA1b [ GkHBTbxGpFOT0B2v 
    && KL4p <= SiK2Bg / - ! uncJf4_t ( z , Mqpk9FlhUMm 
    && _CYMn6c < Qk5z2JdfXmKh + ( nnAfUzD7oJseB4aYS1 ( 
    oA0__t9vuf5ou == MNNa4DjI_vsC0RZ6i5Sf - fQA37wAXFtDy 
    / - ax3_ ( QQ7csn_vKY8EKMEchhf || izTP >= UjV - ( 
    tfR8cUyDaTRVOP || lSUWIwWz != eWeyR0OFQWBF6aerG ) 
    ) ) = gIFhnL7gry * 368326944.1773803283 ) * a0C . 
    ogG31SFbBFxYyqZouM ) ] * ! - 1081082409 . YRlQ0rn 
    / Dek ( ) ;

}
struct {
  int yOipJ40H ;
  int TZ ;
  int DjV ;
  struct LhEZ3Xa7RKpy8 {
    struct {
      int IbPOs9FC65o3R ;
    }h4WFqIjvXRVNo44NE ;
    int p41 ;
  }PwI3r1ahCW7nierEQ ;
  int kYSZeQ , p = hVR12u ;
}JqL2Em9_C7uZ6oZj [ 865722851 ] 

int ;
;
int xnUoTCFbzt1h , n7Z5 

;
int TM ( ) {
  TI ;
  if ( taQgc3YASL1AyDgxus )   if ( JBNfBCZcORcDhv 
    )   a1ot ;
else   cyGR7LlL2l0eLSshV5La struct ;

else   if > ( JIjTq )   if ( b69CUQhceCZTyOsY )   return 
    FpNxUlgQ5tVwXroR ;
else   if ( pV2jM5byGdCvQX )   if ( kd0sH8jFnHVahLCcX 
    ) {
  }




}>= 
int 
int ;
int ;
int ;
int ;
int L ( int K2kIEzV93H2e , int NEX ) {
}
